--- a/privacy_utility_tradeoff.ipynb
+++ b/privacy_utility_tradeoff.ipynb
@@ -367,8 +367,8 @@
     "**Example (example_id = 0)**\n",
     "\n",
     "- Original prompt: `def has_close_elements(numbers: List[float], threshold: float) -> bool: ...`\n",
-    "- Low obfuscation: `def v2(v3: v1[v4], v5: v4) -> bool: ...`\n",
-    "- High obfuscation: `def X2(X3: X1[X4], X5: X4) -> bool: ...`\n"
+    "- Low obfuscation: `def v1(v2: List[float], v3: float) -> bool: ...`\n",
+    "- High obfuscation: `def X1(X2: List[float], X3: float) -> bool: ...`\n"
    ]
   },
   {
